# vision

./: .clang-format  .clang_complete  CMakeLists.txt  README.md  genincludes  genproto
capture/: SourceProvider.cc  SourceProvider.hh
common/: Frame.hh  ISourceProvider.hh  Jpeg.cc  Jpeg.hh
opencl/: convert.cl  median.cl  orb.cl
proto/: capture.py  filters.org  play.py  single.py  vision.py
src/: EGLWindow.cc  EGLWindow.hh  Features.cc  FrameCounter.cc  FrameCounter.hh  GPU.cc  GPU.hh  Renderer.cc  Renderer.hh  SourceFactory.cc  main.cc
src/capture/: SourceProvider.cc  SourceProvider.hh
src/common/: Frame.hh  ISourceProvider.hh  Single.hh  TimeCounter.hh  config.hh
src/opencl/: convert.cl  median.cl  orb.cl
src/synth/: SourceProvider.cc  SourceProvider.hh
synth/: SourceProvider.cc  SourceProvider.hh
tools/png2dat/: main.cc
vision/: Computer.cc  Computer.hh  EGLWindow.cc  EGLWindow.hh  Features.hh  FrameCounter.cc  GPU.cc  GPU.hh  Renderer.cc  Renderer.hh  SourceFactory.cc  SourceFactory.hh  main.cc  shaders.cc  shaders.hh  vec.hh
